--- a/MPortal/Scence/Home/Base.lproj/HomeVC.xib
+++ b/MPortal/Scence/Home/Base.lproj/HomeVC.xib
@@ -33,8 +33,8 @@
                         <action selector="continueBtnBtnClicked:" destination="-1" eventType="touchUpInside" id="Aap-Im-Zhi"/>
                     </connections>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4iD-Kt-FY7">
-                    <rect key="frame" x="0.0" y="67" width="390" height="659.66666666666663"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4iD-Kt-FY7">
+                    <rect key="frame" x="16" y="67" width="358" height="659.66666666666663"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
@@ -45,8 +45,8 @@
                 <constraint firstItem="0wM-eB-gJJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ENd-pC-rK3"/>
                 <constraint firstItem="0wM-eB-gJJ" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="width" multiplier="0.111111" id="H0w-DR-qMU"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="0wM-eB-gJJ" secondAttribute="bottom" constant="28" id="ZRs-q7-zdr"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4iD-Kt-FY7" secondAttribute="trailing" id="aWH-eM-qBZ"/>
-                <constraint firstItem="4iD-Kt-FY7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="bXe-za-OlQ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="4iD-Kt-FY7" secondAttribute="trailing" constant="16" id="aWH-eM-qBZ"/>
+                <constraint firstItem="4iD-Kt-FY7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="bXe-za-OlQ"/>
                 <constraint firstItem="4iD-Kt-FY7" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="o4q-w7-oNM"/>
                 <constraint firstItem="0wM-eB-gJJ" firstAttribute="top" secondItem="4iD-Kt-FY7" secondAttribute="bottom" constant="12" id="uwE-hh-3yj"/>
             </constraints>
